--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.2.0",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.9.0",
     "tslib": "^2.3.0",
     "typed.js": "^2.0.16",
     "zone.js": "~0.11.4"
